added lan mode only

--- a/DST SS/cluster.ini
+++ b/DST SS/cluster.ini
@@ -11,6 +11,7 @@ cluster_password =
 cluster_intention = social
 autosaver_enabled = true
 enable_vote_kick = false
+lan_only_cluster = true
 
 [MISC]
 console_enabled = true
