--- a/DST SS/Dockerfile
+++ b/DST SS/Dockerfile
@@ -2,6 +2,8 @@ FROM wallacepf/steamcmd:latest
 
 LABEL maintainer="wallacepf@gmail.com"
 
+USER steam
+
 RUN mkdir -p /src/server_dst/config/DoNotStarveTogether/TrancaDSTServer/Master && \
 mkdir /src/server_dst/config/DoNotStarveTogether/TrancaDSTServer/Caves
 
@@ -13,7 +15,7 @@ RUN ./steamcmd.sh +runscript ../config/server_dst.txt
 
 COPY Scripts/* /src/server_dst/bin/
 COPY cluster.ini /src/server_dst/config/DoNotStarveTogether/TrancaDSTServer
-COPY cluster_token.txt /src/server_dst/config/DoNotStarveTogether/
+COPY cluster_token.txt /src/server_dst/config/DoNotStarveTogether/TrancaDSTServer
 COPY Caves/* /src/server_dst/config/DoNotStarveTogether/TrancaDSTServer/Caves/
 COPY Master/* /src/server_dst/config/DoNotStarveTogether/TrancaDSTServer/Master/
 
